examples/test/testpolicy11622.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11622
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key17: value41
      key24: value37
      key41: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value17
          key22: value41
          key13: value14
      podSelector:
        matchLabels:
          key36: value44
          key22: value45
